# helpnest

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  UNIT_TESTING_STRATEGY.md  UNIT_TEST_RESULTS.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  lint-staged.config.mjs  package.json  pnpm-lock.yaml  railway.json  tsconfig.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
apps/agent/: Dockerfile  pyproject.toml
apps/agent/src/: main.py
apps/agent/src/agent/: config.py  plugins.py  prompt.py  providers.py  tools.py  worker.py
apps/docs/: package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/github-action/: action.yml  package.json  tsconfig.json
apps/github-action/src/: index.js  index.ts
apps/web/: .env.test  .env.test.example  eslint.config.mjs  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: api-crud.spec.ts  auth.spec.ts  dashboard.spec.ts  help-center.spec.ts
apps/web/public/: manifest.json
apps/web/scripts/: calibrate-retrieval-floor.ts  check-translations.js  demo-seed.ts
apps/web/src/: instrumentation.js  instrumentation.ts  middleware.js  middleware.ts  proxy.ts
cloudflare/worker/: package-lock.json  package.json  wrangler.toml
scripts/: dev-setup.sh  self-host-setup.sh
(+533 files in other folders)
